hphp/test/slow/global_func/meth_caller/meth_caller_special_cls.php.expectf

Fatal error: Invalid class in %s/meth_caller_special_cls.php on line 9
